// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar el nombre del producto 1`] = `
<div
  className="productCard "
>
  <span
    className="productDescription "
  >
    Coffee Mug - Sin imagen
  </span>
</div>
`;

exports[`ProductTitle debe mostrar titutlo personalizado 1`] = `
<span
  className="productDescription "
>
  Custom Title
</span>
`;
